OPHY-436 Use correct overflow orientation

--- a/va-virkailija/web/va/hakemus-list/hakemus-listing.less
+++ b/va-virkailija/web/va/hakemus-list/hakemus-listing.less
@@ -18,7 +18,7 @@
 
 .hakemus-list-container {
   min-height: 600px;
-  overflow-y: visible;
+  overflow-x: visible;
 
   .listing-footer {
     display: flex;
